// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StoreAddressDistance should not render when no distance was passed 1`] = `""`;

exports[`<StoreAddressDistance should render when a unit system is set 1`] = `
<span
  className="css-1fxtar0"
>
  5.4 imperial
</span>
`;

exports[`<StoreAddressDistance should render when the distance is 0 1`] = `
<span
  className="css-1fxtar0"
>
  0 metric
</span>
`;
